tests/snapshots/tests__pre_reduce_run@f32.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/f32.hvmc
---
[#finf [#f-inf [#fNaN [#f2.5 [#f-1.5 [#f1 [#f0.25 [#f0.5 [#f0 [#f1 [#f1 [#f0 [#f2.5 [#f-1.5 [#f1 [#f0.25 [#f0.5 [#f0 [#f1 [#f1 [#f0 *]]]]]]]]]]]]]]]]]]]]]
pre-reduce:
RWTS   :               2
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               1
- OPER :               1
run:
RWTS   :              83
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :              62
- OPER :              21
