tests/snapshots/tests__pre_reduce_run@log.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/log.hvmc
---
#2
pre-reduce:
RWTS   :               2
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               2
- OPER :               0
run:
RWTS   :               7
- ANNI :               2
- COMM :               0
- ERAS :               1
- DREF :               4
- OPER :               0
