tests/snapshots/tests__pre_reduce_run@ops.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/ops.hvmc
---
[#255 [#65535 [#4294967295 [#-1 [#255 [#65535 [#4294967295 [#-1 [#0 [#0 [#0 [#0 [#-1 [#-1 [#-1 [#-2 [#-2 [#-2 [#12 [#8 [#20 [#5 [#0 [#0 [#1 [#0 [#1 [#2 [#10 [#8 [#40 [#2 [#0 *]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
pre-reduce:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
run:
RWTS   :             101
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :              68
- OPER :              33
