tests/snapshots/tests__pre_reduce_run@queue.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/queue.hvmc
---
((@C0 (((((a b) (a b)) (((({3 (c d) (e c)} (e d)) ((* (f f)) g)) (* g)) h)) (* h)) i)) (* i))
pre-reduce:
RWTS   :              63
- ANNI :              39
- COMM :               1
- ERAS :               4
- DREF :              19
- OPER :               0
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
